--- a/html.html
+++ b/html.html
@@ -1,25 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ini adalah halaman html</title>
+<tittle>web desain</tittle>
 </head>
 <body>
-
-<h1>belajar desain web menggunakan html-> h1</h1>
-<p>pada pertemuan ini diharapkan mahasiswa aktif untuk memahami tentang bahasa pemograman html</p>
-<p>komentar</p> <!-- ini adalah komentar-->
-<h2> ini adalah list -> h2</h2>
-
-<ol>
-	<li>coffee</li>
-	<li>tea</li>
-	<li>milk</li>
-</ol>
-<ul>
-	<li>kentang goreng</li>
-	<li>pisang goreng</li>
-	<li> tahu petis</li>
-</ul>
-
+	
+	<article>
+  <header>
+    <h1>bagaimana cara merebus air?</h1>
+    <p>langkah-langkah merebus air:</p>
+  </header>
+	<p>ambil air lalu rebus diatas kompor</p>
+	</article>
+	
+	<nav>
+  <a href="https://instagram.com/suka_kamu_2106">@suka_kamu_2106</a> |
+	</nav>
+	
+	<section>
+		<h1>belajar desain web bersama</h1>
+		<p>pada <b>pertemuan ini</b> diharapkan mahasiswa aktif
+	<br>untuk memahami tentang bahasa pemrogaman</br> html
+	</p>
+	<p>komentar</p> <!-- ini adalah komentar -->
+	</section>
+	
+	<section>
+		<h2>ini adalah list -> h2</h2>
+	
+	<ol>
+		<li>coffee</li>
+		<li>tea</li>
+		<li>milk</li>
+	</ol>
+	
+	<ul>
+		<li>kentang goreng</li>
+		<li>pisang coklat</li>
+		<li>tahu petis</li>
+	</ul>
+	</section>
+	
+	<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p>
+	
+	<aside>	
+	<h4>Epcot Center</h4>
+	<p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+	</aside>
+	
+	<article>
+		<h3>HALLO</h3>
+		<p>saya sysilia</p>
+	</article>	
+	
+	<footer>
+	<p>Author:sysil</p>
+	<p><a href="https://mail.sysiliawardah3@gmail.com">sysiliawardah3@gmail.com</a></p>
+	</footer>
+		
+	
+  
 </body>
 </html>
